# adx-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  mock_dsp.rs
src/api/: handlers.rs  mod.rs
src/bidding/: dsp.rs  dsp_client.rs  engine.rs  mod.rs
src/config/: config_manager.rs  mod.rs
src/logging/: adx_log.rs  logger.rs  mod.rs  runtime_logger.rs
src/model/: adapters.rs  context.rs  dsp.rs  mod.rs  placements.rs  ssp.rs
src/openrtb/: request.rs  response.rs
static/: dsp_placements.json  ssp_info.json  ssp_placements.json
