[package]
name = "rust-adx"
version = "0.1.0"
edition = "2021"

# 项目描述
description = "An OpenRTB-based Ad Exchange (ADX) Service implemented in Rust"
license = "MIT"
authors = ["WhiteCcinn <471113744@qq.com>"]
repository = "https://github.com/your-repo/adx_openrtb"


[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.27", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
futures = "0.3.31"
